# borz-client

./: Cargo.toml  README.md  snapcraft.yaml
src/: app.rs  args.rs  main.rs  ui.rs
src/api/: fetch.rs
src/api/resources/: queries.gql  schema.gql
src/widgets/: account.rs  bio.rs  group.rs  location.rs  messages.rs  mod.rs  page.rs  subgroups.rs  threads.rs  user.rs
