[package]
name = "borz_client"
version = "0.1.0"
authors = ["Leyang Zou <leyang.zou@student.tdsb.on.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.11.0", features = ["blocking"] }
graphql_client = "0.9.0"
serde = "1.0.119"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
crossbeam-channel = "0.5.0"
crossterm = "0.19.0"
url = "2.2.0"
clap = "2.33.3"
json = "0.12.4"
rpassword = "5.0.0"
